<resources>
    <string name="app_name">Fitness</string>
    <string name="welcome">Welcome to fitness</string>
    <string name="workout">Workout</string>
    <string name="step">StepCounter</string>
    <string name="stepsText">Steps counter</string>
    <string name="steps">123</string>
    <string name="justSteps">Steps</string>
    <string name="activity">Cvik</string>
    <string name="time">Time</string>
    <string name="number">200</string>
    <string name="KCAL">KCAL</string>
    <string name="minutes">30–35</string>
    <string name="min">MIN</string>
    <string name="clock">00:00</string>
    <string name="finish">Done!</string>
    <string name="descriptionText">"Description: "</string>
    <string name="timeText">"Time: "</string>
    <string name="caloriesText">"Calories: "</string>
    <string name="hitnt_name_of_workout">Name of workout</string>
    <string name="hint_time">Time</string>
    <string name="hint_calories">Calories</string>
    <string name="hint_img">Img</string>
    <string name="hint_text">Text</string>
</resources>