<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".WorkoutAkitivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/abel"
        android:id="@+id/idTVHeading"
        >

    </TextView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/idTVHeading"
        android:id="@+id/idLL"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:fontFamily="@font/abel"
                android:padding="9dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/idTVCalories"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/abel"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/KCAL"
                android:textColor="@color/txt_color"
                android:textSize="15sp"
                >

            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textColor="@color/white"
                android:fontFamily="@font/abel"
                android:padding="9dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/idTVTime"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/abel"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/min"
                android:textColor="@color/txt_color"
                android:textSize="15sp"
                >

            </TextView>
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:layout_below="@id/idLL"
        >

    </View>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/idLL"
        android:layout_marginTop="10dp"
        android:id="@+id/idWorkoutRV"

        >

    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>