<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".WorkoutDetailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/abel"
        android:text="@string/workout"
        android:textSize="40sp"
        android:padding="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginEnd="4dp"
        android:textStyle="bold"
        android:id="@+id/idTVWorkoutDetail">

    </TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVWorkoutDetail"
        android:id="@+id/idSV">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@color/back_color"
                android:src="@drawable/workout"
                android:id="@+id/idIVWorkoutDetail">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idTVWorkoutDetailCalories"
                android:padding="5dp"
                android:text="@string/KCAL"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/abel"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textAlignment="center"
                >

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idTVWorkoutDetailTime"
                android:padding="5dp"
                android:text="@string/time"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/abel"
                android:textColor="@color/white"
                android:gravity="center"
                android:textAlignment="center"
                >

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idTVWorkoutDetailText"
                android:padding="5dp"
                android:text="@string/activity"
                android:textSize="18sp"
                android:fontFamily="@font/abel"
                android:textColor="@color/white"
                android:gravity="center"
                android:textAlignment="center"
                >

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idTVClock"
                android:fontFamily="@font/abel"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/clock"
                android:textColor="@color/white"
                android:textSize="70sp"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_play"
                    android:id="@+id/idFAB1"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_stop"
                    android:id="@+id/idFAB2"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>