<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".StepCounterAktivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTVHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/abel"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/stepsText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/idTVSteps"
            android:layout_marginTop="50dp"
            android:text="@string/steps"
            android:textColor="@color/white"
            android:fontFamily="@font/abel"
            android:padding="10dp"
            android:background="@drawable/steps_back"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="50sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abel"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/justSteps"
            android:textAlignment="center"
            android:id="@+id/idTVStepsHeading"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/walk"
            >

        </ImageView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idFAB"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_play"
            android:tint="@color/white" />


    </LinearLayout>
</ScrollView>
