<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTVHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/abel"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idTVSubheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVHeading"
            android:fontFamily="@font/abel"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVSubheading"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/idLLWorkout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="4dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/workout"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/workout"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/abel"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idLLStepCounter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="4dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/step"
                    android:layout_gravity="center"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step"
                    android:textAlignment="center"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/abel"
                    android:textStyle="bold"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
